# TopSim

./: .pre-commit-config.yaml  .pre-commit-local-checks  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  topsim-cli
src/: topsim_cli.py
src/topsim/: __init__.py  best.py  grammap.py  localtyping.py  setsimilarity.py  topsim.py
test/: test_importable.py
topsim/: __init__.py  best.py  grammap.py  index.py  localtyping.py  remapper.py  setsimilarity.py  str2set.py  topsim.py
