[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TopSim"
description = "Search the most similar strings against the query in Python 3."
version = "0.1.5"
authors = [{ name = "Chuancong Gao", email = "chuanconggao@users.noreply.github.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "docopt>=0.6.2",
    "extratools-core>=0.1.0",
]
keywords = [
    "similarity-search",
    "string-search",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/chuanconggao/TopSim"

[project.scripts]
topsim-cli = "topsim_cli:run"
