[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TopSim"
description = "Search the most similar strings against the query in Python 3."
version = "0.2.0"
authors = [{ name = "Chuancong Gao", email = "chuanconggao@users.noreply.github.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "docopt-ng>=0.9.0",
    "extratools-core>=0.1.0",
]
keywords = [
    "similarity-search",
    "string-search",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/chuanconggao/TopSim"

[project.scripts]
topsim-cli = "topsim_cli:run"

[dependency-groups]
dev = [
    "pytest-cov>=4.1.0",
    "mypy>=1.7.1",
    "ipython>=9.0.2",
]

[tool.coverage.run]
source = [
    "src",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml:cov.xml --cov-report html --cov-report term-missing test"
pythonpath = [
    "src",
]
